prepared main.py and yoyaku.py

--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,4 +1,4 @@
-[GOOGLE_APPLICATION_CREDENTIALS_JSON]
+[google_credentials]
 type = "service_account"
 project_id = "yoyaku-wgs"
 private_key_id = "1e8f30336c21542124f7aef81078c371a2d16c16"
